pve-container (1.0-66) unstable; urgency=medium

  * Setup: add gentoo support

 -- Proxmox Support Team <support@proxmox.com>  Mon, 23 May 2016 07:04:53 +0200

pve-container (1.0-65) unstable; urgency=medium

  * allow VLAN 1 tag in containers

  * remove backup property from rootfs

  * new helper mountpoint_backup_enabled()

 -- Proxmox Support Team <support@proxmox.com>  Wed, 18 May 2016 11:30:16 +0200

pve-container (1.0-64) unstable; urgency=medium

  * setup: add ct_is_executable wrapper

  * setup: check if securetty exists

  * improve error message on container without rootfs

 -- Proxmox Support Team <support@proxmox.com>  Sat, 14 May 2016 09:06:11 +0200

pve-container (1.0-63) unstable; urgency=medium

  * cleanup gateway hooks in debian network setup

  * fix uninitialized value warning

  * Alpine: generate correct inittab

  * Alpine: fixup securetty

  * fix #971: don't activate shared storage in offline migration

 -- Proxmox Support Team <support@proxmox.com>  Tue, 03 May 2016 07:19:19 +0200

pve-container (1.0-62) unstable; urgency=medium

  * centos: fixup ipv6 out-of-subnet route

  * debian: always include the 'dev' portion in explicit routes

  * setup: deal with link-local gateways

 -- Proxmox Support Team <support@proxmox.com>  Tue, 26 Apr 2016 16:00:06 +0200

pve-container (1.0-61) unstable; urgency=medium

  * add support for ubuntu xenial

  * push/pull permissions: use octal by default

  * fix #942: restore ACL and other rootfs options from backup

  * Debian: correctly setup getty service on systemd based containers

  * honor acl setting with zfs

 -- Proxmox Support Team <support@proxmox.com>  Wed, 20 Apr 2016 11:25:34 +0200

pve-container (1.0-60) unstable; urgency=medium

  * vm_status: return more verbose HA state

 -- Proxmox Support Team <support@proxmox.com>  Tue, 19 Apr 2016 09:04:43 +0200

pve-container (1.0-59) unstable; urgency=medium

  * setup: ability to ignore files

  * Fix #929: delete veths in the post-stop hook
