@@ -2,6 +2,8 @@ pve-container (1.0-66) unstable; urgency=medium
 
   * Setup: add gentoo support
 
+  * Setup/Debian.pm: use BEGIN/END markers for gateway scripts
+
  -- Proxmox Support Team <support@proxmox.com>  Mon, 23 May 2016 07:04:53 +0200
 
 pve-container (1.0-65) unstable; urgency=medium
